# quizium-plus-server

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
src/: main.py
src/config/app/: manager.py
src/config/constants/: directory.py  logger.py
src/config/logger/: manager.py
src/config/logger/handlers/: base.py  console.py  file.py  graylog.py
src/config/orm/: manager.py
src/config/orm/configurations/: base.py  sqlalchemy.py
src/config/settings/: manager.py
src/config/settings/configurations/: base.py  develop.py  production.py  test.py
src/core/orm/sqlalchemy/: base.py
src/core/uow/: generic.py  sqlalchemy.py
src/migrations/: env.py
tests/: conftest.py
